@@ -115,7 +115,7 @@ public class Entities {
                         if (escapeMode != EscapeMode.xhtml)
                             accum.append("&nbsp;");
                         else
-                            accum.append(c);
+                            accum.append("&#xa0;");
                         break;
                     case '<':
                         if (!inAttribute)
