@@ -1,7 +1,9 @@
 package org.jsoup.nodes;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.Charset;
 import org.jsoup.Jsoup;
 import org.jsoup.TextUtil;
@@ -381,5 +383,28 @@ public class DocumentTest {
         }
         
         return doc;
+    }
+
+    @Test
+    public void testShiftJisRoundtrip() throws Exception {
+        String input =
+                "<html>"
+                        +   "<head>"
+                        +     "<meta http-equiv=\"content-type\" content=\"text/html; charset=Shift_JIS\" />"
+                        +   "</head>"
+                        +   "<body>"
+                        +     "before&nbsp;after"
+                        +   "</body>"
+                        + "</html>";
+        InputStream is = new ByteArrayInputStream(input.getBytes(Charset.forName("ASCII")));
+
+        Document doc = Jsoup.parse(is, null, "http://example.com");
+        doc.outputSettings().escapeMode(Entities.EscapeMode.xhtml);
+
+        String output = new String(doc.html().getBytes(doc.outputSettings().charset()), doc.outputSettings().charset());
+
+        assertFalse("Should not have contained a '?'.", output.contains("?"));
+        assertTrue("Should have contained a '&#xa0;' or a '&nbsp;'.",
+                output.contains("&#xa0;") || output.contains("&nbsp;"));
     }
 }
